2007-02-11  Neal H. Walfield  <neal@gnu.org>

	* event-list.c (event_list_init): Pack WIN at the end of
	EVENT_LIST, not the beginning.
	(event_list_size_request): Call the parent class's size_request
	method at the end.  Don't set REQUISITION, call
	gtk_widget_set_size_request on EVENT_LIST->SCROLLED_WINDOW.
	(event_list_size_allocate): Don't set ALLOCATION directly; call
	the parent class's size_allocate method.
	(event_list_reload_events): Only queue a draw on
	EvENT_LIST->SCROLLED_WINDOW.
	(event_list_set_period_box_visible): Don't return before creating
	the widget.

2007-02-11  Neal H. Walfield  <neal@gnu.org>

	* day_view.c (event_rect_expose): Change the way in which the
	period of an event is displayed.

2006-12-30  Neal H. Walfield  <neal@gnu.org>

	* configure.ac: Depend on version 0.20 or greater of libgpevtype.
	
2006-12-30  Neal H. Walfield  <neal@gnu.org>

	* configure.ac: Remove dependencies on sqlite and mimedir-1.0.

2006-12-29  Neal H. Walfield  <neal@gnu.org>

	* configure.ac: Depend on libgpevtype >= 0.2.
	* Makefile.am (gpe_calendar_SOURCES): Remove import-vcal.c,
	import-vcal.h, export-vcal.c and export-vcal.h.  Add
	import-export.c and import-export.h.
	* import-vcal.h: Remove file.
	* import-vcal.c: Likewise.
	* export-vcal.h: Likewise.
	* export-vcal.c: Likewise.
	* globals.h (ERROR_DOMAIN): Define.
	* import-export.h: New file.
	* import-export.c: New file.
	(new_calendar_clicked): Move here from import-vcal.c.
	(cal_import_from_files): Move import_vcal here from import-vcal.c.
	Update callers.
	(save_as_dialog): Move here from export-vcal.c.
	(event_export_dialog): Move export_event_save_as_dialog here from
	export-vcal.c.  Update callers.
	(cal_export_dialog): Move export_calendar_save_as_dialog here from
	export-vcal.c.  Update callers.
	(dbus_init): New function deprecating vcal_export_init.  Update
	callers.
	(export_bluetooth_available): Move here from export-vcal.c.
	(export_irda_available): Likewise.